Actividad tema 4 visualización. Twig y variables

--- a/src/App/AppBundle/Resources/views/Recipes/recipe_show.html.twig
+++ b/src/App/AppBundle/Resources/views/Recipes/recipe_show.html.twig
@@ -5,7 +5,13 @@
     </head>
     <body>
         <div id="content">
-            {{name_recipe}}
+        	{{recipe.name}}
+        	{{recipe.description}}
+        	{{recipe.difficulty}}
+        	{{author.getName()}}
         </div>
     </body>
+    <footer>
+    	Contacto: {{contact_name}}
+    </footer>
 </html>
