Tema 5 forms y validaciones

--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,14 @@
-Hello {{ name }}!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Web de recetas</title>
+    </head>
+    <body>
+        <h1>Web de recetas</h1>
+         <ul id="navigation">
+        <li>
+        	<a href ="{{ url('recipes_index')}}">Empezamos</a>
+        </li>
+        </ul>
+    </body>
+</html>
